--- a/Analise_de_dados_Homicidios.ipynb
+++ b/Analise_de_dados_Homicidios.ipynb
@@ -16,7 +16,7 @@
         "03hjPY5xTR0Z",
         "ugcPXMWETSvQ"
       ],
-      "authorship_tag": "ABX9TyNCjKV9deG3bICs4RcvwJQb",
+      "authorship_tag": "ABX9TyMTOu/f5IBA8ASG36SWZNRM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "8NeoTuEeHGoy"
       },
@@ -92,7 +92,7 @@
       "metadata": {
         "id": "n6zGq7nCUb-K"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,13 +102,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9wGoP40ZV0lW",
         "outputId": "54b0ef3e-f115-4bfe-ca2f-ed6c96512fa3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +495,7 @@
         "id": "xaVdzCpiWjQT",
         "outputId": "2da84d1a-cba9-4e3e-b2c6-d7b909fff77a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +521,7 @@
         },
         "outputId": "6eca50c1-edcd-4cd2-d217-9890e0f91d6e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +564,7 @@
         "id": "fl4dgziVWpG6",
         "outputId": "f51284b2-6b14-43e1-f431-559dafa2f701"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -952,7 +951,7 @@
         "id": "2SUgwj1GWuIB",
         "outputId": "c53fbd9c-330d-4f07-e9e0-c8323764127a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1278,7 +1277,7 @@
         },
         "outputId": "2bf8cfa8-27bc-4bc5-c40f-b51832250218"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1328,7 +1327,7 @@
         "id": "TCpD8Da2umsR",
         "outputId": "efdc8102-9b39-4a27-8b38-63cd30f77926"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,7 +1401,7 @@
       "metadata": {
         "id": "LLxeLBjMu8RS"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1417,7 +1416,7 @@
       "metadata": {
         "id": "9loPVKedmpDo"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1432,7 +1431,7 @@
       "metadata": {
         "id": "EchAI3txmyM_"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1447,7 +1446,7 @@
         "id": "JEMpG5btm1w9",
         "outputId": "c7268ac6-ac31-4009-d795-05617a67d33e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1464,7 +1463,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Quais paises apresentam as 10 maiores índices de homicídios nos últimos 5 anos?"
+        "###Quais países apresentam as 10 maiores índices de homicídios nos últimos 5 anos?"
       ],
       "metadata": {
         "id": "NtkK5BWpTL4B"
@@ -1483,7 +1482,7 @@
         "id": "iNIjSPjVtB30",
         "outputId": "49008d5e-66c7-4da0-89e6-8ce01ad308f8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1513,7 +1512,7 @@
       "metadata": {
         "id": "mLDn3j3eshgb"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1527,7 +1526,7 @@
       "metadata": {
         "id": "9VjwZCL_Udh7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1537,13 +1536,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "6ccENa43cIgK",
         "outputId": "d170b727-ce09-407e-b953-c1e2e5d6abc8"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1919,7 +1917,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Quais paises apresentam os 10 maiores índices de feminicídios em 2022?"
+        "###Quais países apresentam os 10 maiores índices de homicídios de mulheres em 2022?"
       ],
       "metadata": {
         "id": "3E6PlGEpTNu4"
@@ -1936,7 +1934,7 @@
       "metadata": {
         "id": "c3YkCoNFUd3n"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1946,13 +1944,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uGmOzWwPphok",
         "outputId": "6230a1a3-1284-466a-d2f9-880fabc1677e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2347,7 +2344,7 @@
         "id": "Jo8ioK-huBAr",
         "outputId": "6476e7f8-db2f-47b9-d70f-d530799c6f63"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2372,7 +2369,7 @@
       "metadata": {
         "id": "J7nD1N9cuNHa"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2384,7 +2381,7 @@
       "metadata": {
         "id": "QhHCn_y2UeL3"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2400,7 +2397,7 @@
         "id": "ne5C0KHZeMM-",
         "outputId": "f3aaeaa9-daee-4d53-83b5-01a85d2f8158"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2756,7 +2753,7 @@
         "id": "_mfYDSbRfJ0O",
         "outputId": "4af6045b-f947-4825-cdda-28351f83397e"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2793,7 +2790,7 @@
         "id": "g2kHoFTXfT57",
         "outputId": "b6fee10e-ab7a-4ee1-8df5-44abe1472e6c"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2830,7 +2827,7 @@
         "id": "dbcoAD7tfwrA",
         "outputId": "d20706d5-192b-4037-803a-c1917bc099bd"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2872,7 +2869,7 @@
       "metadata": {
         "id": "VaJxFvOeUejt"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2882,13 +2879,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "wfCVUDs1npOB",
         "outputId": "22964ff6-41e4-41e4-ab36-16df900c5b89"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3268,13 +3264,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "0Bfuf1T8nwZe",
         "outputId": "078c5905-a63c-4e46-9c86-e4afc8b8cdae"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3301,7 +3296,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Quais países com menor número de femicídios?"
+        "###Quais países com menor número de morte de mulheres?"
       ],
       "metadata": {
         "id": "7AZ14LdxTQT5"
@@ -3316,7 +3311,7 @@
       "metadata": {
         "id": "0qqEd5tKUfVa"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3326,13 +3321,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "DHVUdMUYpAX_",
         "outputId": "f7aa5aac-a62d-4e1c-85be-332c69e1524d"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3724,7 +3718,7 @@
       "metadata": {
         "id": "NVbiAaDfqtBz"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3736,7 +3730,7 @@
       "metadata": {
         "id": "CzDYcQG8Ufos"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3746,13 +3740,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "zLLngo4zqoQa",
         "outputId": "5f2dc797-45f1-49f9-b81a-e77150b41086"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4115,7 +4108,7 @@
       "metadata": {
         "id": "1mN4BcKFUgBO"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4131,7 +4124,7 @@
         "id": "V9Xf-P4advPu",
         "outputId": "16717c9f-ed35-4800-e6a8-c11e3018364d"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4334,7 +4327,7 @@
       "metadata": {
         "id": "cBXgXKT1eBgO"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4350,7 +4343,7 @@
         "id": "KFW5gEO5eSl4",
         "outputId": "7df84776-f990-47ef-e341-b0876aacba03"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4553,7 +4546,7 @@
       "metadata": {
         "id": "OC8wKXnieI0Z"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4569,7 +4562,7 @@
         "id": "ExiGWmdXedXX",
         "outputId": "d0c8e9f1-f943-4a33-abd2-f2c2905689f5"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4772,7 +4765,7 @@
       "metadata": {
         "id": "bN-br-xyeIm9"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4788,7 +4781,7 @@
         "id": "QsaqdNQYefoR",
         "outputId": "3b389d7c-9368-424e-bdc4-f70e42d38f98"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4991,7 +4984,7 @@
       "metadata": {
         "id": "yyA4XzCWeIR3"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5007,7 +5000,7 @@
         "id": "VSIUxUSbeqJJ",
         "outputId": "cffaf135-4d11-484e-86d8-6e48518c7875"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5202,7 +5195,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Qual o pais com mais violento para as mulheres em 2022?"
+        "###Qual o país com mais violento para as mulheres em 2022?"
       ],
       "metadata": {
         "id": "03hjPY5xTR0Z"
@@ -5429,7 +5422,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Qual o pais com maior valor de 'indicador: Victims of intentional homicide'?"
+        "###Qual o país com maior valor de 'indicador: Victims of intentional homicide'?"
       ],
       "metadata": {
         "id": "ugcPXMWETSvQ"
@@ -5670,7 +5663,7 @@
       "metadata": {
         "id": "X_Xi37fEUhZu"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5685,7 +5678,7 @@
         "id": "4WYplgWSbrjt",
         "outputId": "1e8c40f1-3164-4082-f84d-d07532ddd895"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5708,7 +5701,7 @@
         "id": "HziBldaHbx1j",
         "outputId": "65979597-1320-46c8-9fff-40eb2869616f"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5784,7 +5777,7 @@
         "id": "ovzkvFGuapam",
         "outputId": "6a2f49d3-bef1-440f-8e5a-5085d03809ca"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5816,7 +5809,7 @@
       "metadata": {
         "id": "uU7JadGibxPQ"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5832,7 +5825,7 @@
         "id": "Jmjj37YobP11",
         "outputId": "ddc87792-f475-49f4-ba95-95faccd63863"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6036,7 +6029,7 @@
         "id": "fpXgMaKncOVJ",
         "outputId": "e21d1f93-01de-41f5-e9f1-5023d29eba4c"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6047,18 +6040,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Atividades de casa\n",
-        "1.   Utilize o MatplotLib para a plotagem de gráficos de linha para análise e visualização do número de homicídos nos últimos 10 anos no Brasil.\n",
-        "2.   Análise o uso de algum algoritmo de Machine Learning para prever o número de homicídios no México em 2023.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "vFp5nuVqSrUG"
-      }
     },
     {
       "cell_type": "markdown",
