--- a/Regressão - introdução/Gabaritos/Notebook_01 - Regressão Linear para prever peso de maças.ipynb
+++ b/Regressão - introdução/Gabaritos/Notebook_01 - Regressão Linear para prever peso de maças.ipynb
@@ -220,7 +220,7 @@
       "outputs": [],
       "source": [
         "#Analisando a correlação dos dados\n",
-        "apples.corr()"
+        "apples.iloc[:, 0:-2].corr()"
       ]
     },
     {
@@ -232,7 +232,7 @@
       "outputs": [],
       "source": [
         "#Análise da correlação de forma gráfica\n",
-        "corr(apples)"
+        "corr(apples.iloc[:, 0:-2])"
       ]
     },
     {
