--- a/Regressão - introdução/Gabaritos/Notebook_02 - Regressão Linear para prever números de gols por time.ipynb
+++ b/Regressão - introdução/Gabaritos/Notebook_02 - Regressão Linear para prever números de gols por time.ipynb
@@ -194,7 +194,7 @@
       "outputs": [],
       "source": [
         "#Analisando a correlação dos dados\n",
-        "worldcup.corr()"
+        "worldcup.iloc[:, 1:].corr()"
       ]
     },
     {
