--- a/Regressão - introdução/Notebook_01 - Regressão Linear para prever peso de maças.ipynb
+++ b/Regressão - introdução/Notebook_01 - Regressão Linear para prever peso de maças.ipynb
@@ -129,6 +129,13 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -221,7 +228,7 @@
       "outputs": [],
       "source": [
         "#Analisando a correlação dos dados\n",
-        "apples.corr()"
+        "apples.iloc[:, 0:-2].corr()"
       ]
     },
     {
@@ -233,7 +240,7 @@
       "outputs": [],
       "source": [
         "#Análise da correlação de forma gráfica\n",
-        "corr(apples)"
+        "corr(apples.iloc[:, 0:-2])"
       ]
     },
     {
