--- a/Regressão - introdução/Gabaritos/Notebook_03 - Regressão Linear para prever o consumo de energia.ipynb
+++ b/Regressão - introdução/Gabaritos/Notebook_03 - Regressão Linear para prever o consumo de energia.ipynb
@@ -196,7 +196,7 @@
       "outputs": [],
       "source": [
         "#Analisando a correlação dos dados\n",
-        "steel.corr()"
+        "steel['Lagging_Current_Reactive.Power_kVarh', 'Leading_Current_Reactive_Power_kVarh', 'CO2(tCO2)', 'Lagging_Current_Power_Factor', 'Leading_Current_Power_Factor', 'Usage_kWh'].corr()"
       ]
     },
     {
